RESOLVED FIXED160999
[Mac] fix PiP context menu typos
https://bugs.webkit.org/show_bug.cgi?id=160999
Summary [Mac] fix PiP context menu typos
Eric Carlson
Reported 2016-08-19 10:18:58 PDT
Remove the hyphens from "Picture-in-Picture"
Attachments
Proposed patch. (2.31 KB, patch)
2016-08-19 10:33 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2016-08-19 10:19:23 PDT
Eric Carlson
Comment 2 2016-08-19 10:33:12 PDT
Created attachment 286456 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2016-08-19 11:23:16 PDT
Comment on attachment 286456 [details] Proposed patch. Clearing flags on attachment: 286456 Committed r204638: <http://trac.webkit.org/changeset/204638>
WebKit Commit Bot
Comment 4 2016-08-19 11:23:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.