[Mac] fix PiP context menu typos https://bugs.webkit.org/show_bug.cgi?id=160999 <rdar://problem/27885070>

Reviewed by Jer Noble.

* English.lproj/Localizable.strings: "Picture-in-Picture" -> "Picture in Picture".

* platform/LocalizedStrings.cpp:
(WebCore::contextMenuItemTagEnterVideoEnhancedFullscreen): Ditto.
(WebCore::contextMenuItemTagExitVideoEnhancedFullscreen): Ditto.


Canonical link: https://commits.webkit.org/179115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204638 268f45cc-cd09-0410-ab3c-d52691b4dbfc